# overthefinishline.com

./: .gitignore  .gitmodules  Makefile  README.md  development.env.example  docker-compose.production.yml  docker-compose.yml  example.env  start
api/: Makefile  stack.yaml  (+1 more)
dashboard/: .dockerignore  .gitignore  Makefile  build  development.env.example  elm-package.json  overthefinishline-dashboard.cabal  package-lock.json  package.json  run-tests  serve  stack.yaml
dashboard/client/native/src/: Moment.js
dashboard/client/src/: Error.elm  HttpX.elm  Main.elm  Model.elm  Moment.elm  Navigation.elm  Url.elm  stylesheet.scss
dashboard/client/src/App/: Error.elm  Http.elm  List.elm  Location.elm  Model.elm  Navigation.elm  Urls.elm
dashboard/client/src/App/Page/: Attributes.elm  Authentication.elm  Dashboard.elm  EditProject.elm  Error.elm  Frame.elm  Home.elm  Html.elm  Loading.elm  Navigation.elm  NewProject.elm  Progress.elm  SelectAProject.elm
dashboard/client/src/App/Server/: Dashboard.elm  Me.elm  Project.elm
dashboard/client/src/GitHub/: PullRequests.elm
dashboard/client/src/Page/: Attributes.elm  Authentication.elm  Dashboard.elm  Error.elm  Frame.elm  Loading.elm  Navigation.elm  SelectAProject.elm
dashboard/client/src/Server/: Dashboard.elm  Me.elm
dashboard/client/static/: index.html  load.js
dashboard/client/test/: Main.elm  TestFramework.elm  Tests.elm
dashboard/client/test/Test/: Model.elm  Moment.elm
dashboard/client/test/Test/App/: Http.elm  List.elm  Location.elm  Model.elm
dashboard/client/test/Test/App/Server/: Dashboard.elm  Me.elm  Project.elm
dashboard/client/test/Test/GitHub/: PullRequests.elm
dashboard/client/test/Test/Helpers/: Task.elm
dashboard/client/test/Test/Server/: Dashboard.elm  Me.elm
dashboard/elm-stuff/: exact-dependencies.json
dashboard/native/: Moment.js  TestFramework.js
dashboard/public/: index.html  load.js
dashboard/server/: LICENSE  build.sbt  overthefinishline-dashboard-server.cabal
dashboard/server/app/: Main.hs
dashboard/server/src/OverTheFinishLine/Dashboard/: Configuration.hs  Enumerations.hs  GitHub.hs  Infrastructure.hs  Lists.hs  Model.hs  Persistence.hs  PersistentEnumerations.hs  Session.hs
dashboard/server/src/main/scala/com/overthefinishline/dashboard/: Application.scala  ApplicationRoutes.scala  Credentials.scala  DashboardRoute.scala  DashboardRoutes.scala  EncryptedCookieCredentials.scala  JsonSupport.scala  OAuthRoute.scala  OAuthRoutes.scala  StaticFileRoute.scala  package.scala
dashboard/server/test/: Spec.hs
dashboard/server/test/Test/OverTheFinishLine/Dashboard/: GitHub.hs  Lists.hs  Model.hs
dashboard/src/: Error.elm  Main.elm  Model.elm  Moment.elm  Styles.elm  Stylesheet.elm  index.html  stylesheet.scss
dashboard/src/GitHub/: PullRequests.elm
dashboard/src/Page/: Attributes.elm  Dashboard.elm  Error.elm  Loading.elm
dashboard/test/: Main.elm  TestFramework.elm  run.js
dashboard/test/Test/: Model.elm  Moment.elm
dashboard/test/Test/GitHub/: PullRequests.elm
(+14 files in other folders)
