name:                overthefinishline-dashboard
version:             0.1.0.0
synopsis:            Over The Finish Line :: Dashboard
description:         Please see README.md
homepage:            https://github.com/SamirTalwar/overthefinishline.com#readme
license:             AllRightsReserved
license-file:        ../LICENSE
author:              Samir Talwar
maintainer:          samir@noodlesandwich.com
copyright:           Samir Talwar
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      server/src
  exposed-modules:     OverTheFinishLine.Dashboard.Enumerations
                     , OverTheFinishLine.Dashboard.GitHub
                     , OverTheFinishLine.Dashboard.Model
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , http-types
                     , persistent
                     , persistent-postgresql
                     , persistent-template
                     , text
                     , time
                     , unordered-containers
  default-language:    Haskell2010

executable overthefinishline-dashboard-exe
  hs-source-dirs:      server/app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , overthefinishline-dashboard
                     , aeson
                     , base64-bytestring
                     , bytestring
                     , containers
                     , cryptonite
                     , esqueleto
                     , filepath
                     , hoauth2
                     , http-client
                     , http-client-tls
                     , http-conduit
                     , http-types
                     , monad-logger
                     , persistent
                     , persistent-postgresql
                     , Spock
                     , text
                     , time
                     , transformers
                     , unix
                     , unordered-containers
                     , wai-extra
                     , wai-middleware-static
                     , warp
  default-language:    Haskell2010

test-suite overthefinishline-dashboard-server-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      server/test
  main-is:             Spec.hs
  build-depends:       base
                     , overthefinishline-dashboard
                     , hspec
                     , aeson
                     , heredoc
                     , text
                     , time
                     , transformers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/SamirTalwar/overthefinishline.com
